# stOTTRS

./: Cargo.toml  README.md
.github/workflows/: python_linux_release.yml  python_release.yml  python_tests.yml  python_windows_release.yml
arrow_python_utils/: Cargo.toml
arrow_python_utils/src/: to_python.rs
doc/: python_mapper_api.md  rds_mapping.ipynb
py_stottrs/: Cargo.toml  pyproject.toml
py_stottrs/python/stottrs/: __init__.py  functions.py
py_stottrs/src/: error.rs  lib.rs
py_stottrs/tests/: .gitignore  test_basics.py  test_integration.py
stottrs/: Cargo.toml
stottrs/src/: ast.rs  constants.rs  io_funcs.rs  lib.rs  mapping.rs  resolver.rs  templates.rs  triplestore.rs
stottrs/src/mapping/: constant_terms.rs  default.rs  errors.rs  export_triples.rs  literals.rs  ntriples_write.rs  validation_inference.rs
stottrs/src/triplestore/: conversion.rs  export_triples.rs  formatted_parquet_write.rs  native_parquet_write.rs  ntriples_write.rs  parquet.rs  sparql.rs
stottrs/src/triplestore/sparql/: errors.rs  lazy_aggregate.rs  lazy_expressions.rs  lazy_graph_patterns.rs  lazy_order.rs  lazy_triple.rs  solution_mapping.rs
stottrs/src/triplestore/sparql/lazy_graph_patterns/: distinct.rs  extend.rs  filter.rs  group.rs  join.rs  lazy_group.rs  lazy_triple.rs  left_join.rs  minus.rs  order_by.rs  path.rs  project.rs  triple.rs  union.rs  values.rs
stottrs/tests/: test_stottrs.rs
