[package]
name = "py_stottrs"
version = "0.1.45"
edition = "2021"

[workspace]

[dependencies]
pyo3 = {version = "0.16.5", features = ["extension-module"]}
stottrs = {path="../stottrs"}
oxrdf = "0.1.0"
arrow_python_utils = {path="../arrow_python_utils"}
thiserror="1.0.31"
polars-core = {version="0.24.3"}

[lib]
name = "stottrs"
crate-type = ["cdylib"]

[package.metadata.maturin]
python-source = "python"